# ai-agent-server

./: .editorconfig  .env.example  README.md  main.py  pyproject.toml  test.py
app/: main.py  routes.py
app/auth/: auth_utils.py  crypt_utils.py  token_utils.py
app/config/: ai_configs.py  env.py
app/controller/: add_auth_route.py  add_custom_stream_route.py  add_docs_route.py  add_file_route.py  add_graph_proxy_route.py  add_test_route.py
app/model/: BasicModel.py  FileModel.py  LlmDemoModel.py  ResumeTemplateModel.py  ResumeTemplateVueModel.py  ResumeUserModel.py  ResumeUserVueModel.py  UserLoginLogsModel.py  UserModel.py
app/utils/: PER_REQ_CONFIG_MODIFIER.py  add_model_routes.py  add_proxy_routes.py  get_local_ips.py  llm_utils.py  model_utils.py  mysql_utils.py  next_id.py  path_join.py  redis_cache.py  redis_lock.py  redis_utils.py
tests/: conftest.py  pytest.ini
tests/app/auth/: test_crypt_utils.py
tests/app/controller/: test_add_auth_route.py
tests/app/model/: test_BasicModel.py
tests/app/utils/: test_get_local_ips.py
