[tool.poetry]
name = "ai-agent-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.3.0,<0.4.0"}  # 更新到v0.3.0版本，与langchain 1.2.13兼容
pydantic = "2.10.6"
langgraph = "^1.1.3"
langchain = {extras = ["openai"], version = "^1.2.13"}
pydantic-settings = "2.10.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

# 配置国内镜像源
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"  # 最高优先级

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"  # 次级优先级

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
